# tclap commandline parser

# libs sources, headers here because we dont want to install them
noinst_HEADERS = tclap.h \
				 CommandLine.h \
				 tclap/Arg.h \
				 tclap/ArgException.h \
				 tclap/CmdLine.h \
				 tclap/CmdLineInterface.h \
				 tclap/CmdLineOutput.h \
				 tclap/Constraint.h \
				 tclap/DocBookOutput.h \
				 tclap/HelpVisitor.h \
				 tclap/IgnoreRestVisitor.h \
				 tclap/MultiArg.h \
				 tclap/MultiSwitchArg.h \
				 tclap/OptionalUnlabeledTracker.h \
				 tclap/StdOutput.h \
				 tclap/SwitchArg.h \
				 tclap/UnlabeledMultiArg.h \
				 tclap/UnlabeledValueArg.h \
				 tclap/ValueArg.h \
				 tclap/ValuesConstraint.h \
				 tclap/VersionVisitor.h \
				 tclap/Visitor.h \
				 tclap/XorHandler.h

# include paths
AM_CPPFLAGS = $(CXXFLAGS)

# libs to link
AM_LDFLAGS = 
