# xmlframework tests

# programs to build
noinst_PROGRAMS = xmltests

# bin sources, headers here because we dont want to install them
xmltests_SOURCES = Main.cpp

# local libraries needed to build
xmltests_LDADD = -L../xmlframework -lxmlframework

# include paths
xmltests_CPPFLAGS = $(CXXFLAGS) -I$(top_srcdir)/src

# libs to link
xmltests_LDFLAGS =

